welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: not found: value color
	setCouleurBrosse(c:color.lightGray);
                           ^