welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (!estFaceMur()){
	setCouleurBrosse(c:color.lightGray);
	baisseBrosse();
	avance();
}
